튜토리얼 맵 1차제작

--- a/ProjectSettings/Packages/com.unity.probuilder/Settings.json
+++ b/ProjectSettings/Packages/com.unity.probuilder/Settings.json
@@ -176,12 +176,12 @@
             {
                 "type": "UnityEngine.Vector3, UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "ShapeBuilder.LastPivotPosition",
-                "value": "{\"m_Value\":{\"x\":0.000003814697720372351,\"y\":7.152561920520384e-7,\"z\":0.0}}"
+                "value": "{\"m_Value\":{\"x\":5.684341886080802e-14,\"y\":-2.842170943040401e-14,\"z\":-4.76837158203125e-7}}"
             },
             {
                 "type": "UnityEngine.Vector3, UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "ShapeBuilder.LastSize",
-                "value": "{\"m_Value\":{\"x\":30.255390167236329,\"y\":11.129422187805176,\"z\":16.811878204345704}}"
+                "value": "{\"m_Value\":{\"x\":7.92425537109375,\"y\":1.5770646333694459,\"z\":11.725851058959961}}"
             },
             {
                 "type": "UnityEngine.Quaternion, UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
